# 3DG-vol-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  github-uw  github-uw.pub
include/: camera.h  distance_solvers.h  gaussian.h  gmm.h  image.h  integrator.h  inverse_integrator.h  optimizer.h  ray.h  renderer.h  rng.h  scene.h  smm.h  test_integrators.h  volume.h
scenes/gaussians/: 1000_random.txt  10k_random.txt  1_gaussian.txt  1_gaussian_rotated.txt  20k_bias.txt  2500_random_small.txt  250_random.txt  2_gaussian.txt  2g_altered.txt  5000_random.txt  50_random.txt  god_ray.txt  many_gaussians.txt  middle_light.txt
scenes/spheres/: 1_spheres.txt  2_lights.txt  2_spheres.txt  3_spheres.txt  3_spheres2.txt  3_spheres3.txt
tests/: env_one_sphere_mult.xml  env_one_sphere_test_ortho.xml  envonly_one_sphere.xml  main.cpp  make_nonuniform_random.py  make_random.py  one_sphere_test.xml  one_sphere_test_ortho.xml  test_vs_pureraymarcher.ipynb  tests.ipynb  whitening_figure.ipynb
tests/renders/: 1g_freeflight.ppm  1g_ms.ppm  1g_ss_exact.ppm  1g_ss_uniform.ppm  250_rand_baseline.ppm  250_rand_bisection_big.ppm  250_rand_ms.ppm  250_rand_ms_uniform.ppm  250_rand_newton_big.ppm  250_rand_ss.ppm  250_rand_uniform_big.ppm  250_random.ppm  2_gaussian_analytic.ppm  2_gaussian_ref.ppm  2g_freeflight.ppm  2g_ms.ppm  50_rand_baseline.ppm  50_rand_ms.ppm  50_rand_ms_uniform.ppm  50_rand_ss.ppm  50_random.ppm  50_random_ms.ppm  7_gaussian_ref.ppm  7g_freeflight.ppm  baseline_1.ppm  baseline_2.ppm  baseline_7.ppm  env_test_orthographic.ppm  envonly_test_orthographic.ppm  gaussian_analytic.ppm  gaussian_ref.ppm  gaussian_test.ppm  god_ray.ppm  gr_freeflight.ppm  gr_ms.ppm  middle_light.ppm  ml_freeflight.ppm  ml_ms.ppm  new_scene.ppm  sphere_ref.ppm  (+7 more)
